use RxJava2 Observables instead of Java 8 streams